# Zotero_Ingest_Worker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.understand-anything/: .understandignore  config.json  fingerprints.json  knowledge-graph.json  meta.json  revision-map.json
.understand-anything/tmp/: import-input.json  import-map.json  scan-basic.json  structure-input.json  ua-import-map-input.json  ua-import-map-output.json  ua-scan-files.json  ua-structure-input.json
repositories/: README.md
repositories/zotero-arxiv-html-ingest/: .gitignore  README.md  pyproject.toml
repositories/zotero-arxiv-html-ingest/docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  OPERATIONS.md
repositories/zotero-arxiv-html-ingest/src/zotero_arxiv_html_ingest/: __init__.py  cli.py  html_fetch.py  identifiers.py  ingest.py  lookup.py  models.py  relay.py  storage.py  text.py
repositories/zotero-arxiv-html-ingest/tests/: test_html_storage.py  test_identifiers_lookup.py  test_ingest.py  test_safe_transport.py
repositories/zotero-metadata-enrichment/: README.md  pyproject.toml
repositories/zotero-metadata-enrichment/docs/: ARCHITECTURE.md  DEVELOPMENT_PLAN.md  OPERATIONS.md
repositories/zotero-metadata-enrichment/src/zotero_metadata_enrichment/: __init__.py  attachment_types.py  cli.py  diff.py  discovery.py  enrichment.py  fulltext.py  html_sources.py  identifiers.py  local_zotero.py  models.py  pdf_sources.py  provider_http.py  safe_http.py  text.py  url_safety.py
repositories/zotero-metadata-enrichment/src/zotero_metadata_enrichment/providers/: __init__.py  arxiv.py  biorxiv.py  common.py  core.py  crossref.py  datacite.py  doaj.py  europe_pmc.py  openaire.py  openalex.py  opencitations.py  pubmed.py  semantic_scholar.py  unpaywall.py  zotero_translation_server.py
repositories/zotero-metadata-enrichment/tests/: test_attachment_types.py  test_discovery.py  test_enrichment.py  test_fulltext.py  test_html_sources.py  test_identifiers_diff.py  test_local_zotero.py  test_pdf_sources.py  test_provider_http.py  test_providers.py  test_safe_http.py
scripts/: bulk_repolish_source_html.py  source_html_audit_cleanup.py
scripts/drains/: full_text_compact.py
scripts/providers/: researchgate_pdf_browser_download.py
tests/: test_article_standard.py  test_arxiv_html_service.py  test_arxiv_source_recovery.py  test_bounded_io.py  test_browser_network_policy.py  test_bulk_repolish_source_html.py  test_cancel_contract.py  test_config.py  test_drain_full_text_compact.py  test_filename_safety.py  test_full_run.py  test_full_text_attachment.py  test_full_text_discovery.py  test_full_text_inventory.py  test_html_contract.py  test_ingest_refactor_boundaries.py  test_local_attachment_sync.py  test_local_zotero_paths.py  test_metadata_backlog_scanner.py  test_metadata_jobs.py  test_metadata_processor.py  test_provider_scripts.py  test_relay_client.py  test_researchgate_pdf_browser_download.py  test_researchgate_pdf_job.py  test_safe_connect_proxy.py  test_scihub_safe_http.py  test_service.py  test_service_actions.py  test_source_html_audit_cleanup.py  test_source_html_maintenance.py  test_source_html_quality_audit.py  test_state_store.py  test_web_html_polish.py  test_worker_roles.py
zotero_ingest_worker/: __init__.py  __main__.py  article_standard.py  arxiv_html.py  bounded_io.py  browser_network_policy.py  config.py  filename_safety.py  full_run.py  full_run_options.py  full_run_plan.py  full_run_results.py  full_text_article.py  full_text_attachment.py  full_text_discovery.py  full_text_inventory.py  fulltext_main.py  local_attachment_sync.py  local_zotero.py  local_zotero_paths.py  local_zotero_sqlite.py  metadata_backlog_scanner.py  metadata_jobs.py  metadata_processor.py  metadata_processor_helpers.py  package_paths.py  pdf.py  provider_scripts.py  relay_client.py  researchgate_pdf.py  safe_connect_proxy.py  scihub_pdf.py  service.py  service_actions.py  source_html_maintenance.py  source_html_quality_audit.py  state.py  state_repositories.py  state_schema.py  worker_roles.py
zoteropdf2md/: __init__.py  arxiv_source_recovery.py  html_contract.py  html_images.py  html_links.py  html_theme.py  web_html_polish.py
zoteropdf2md/assets/katex/: REGENERATE.md  katex.inlined.css
zoteropdf2md/raw_html_polish/: __init__.py  html_fragments.py  katex.py
zoteropdf2md/web_polish/: __init__.py  arxiv.py  cli.py  core.py  iop.py  ojs.py  pmc.py  registry.py  researchgate.py  sciendo.py  springer_nature.py  taylor_francis.py
