[project]
name = "zotero-arxiv-html-ingest"
version = "0.1.0"
description = "Reusable arXiv HTML lookup, validation, storage, and Zotero relay attach helpers."
requires-python = ">=3.11"
dependencies = ["zotero-metadata-enrichment>=0.1.0"]

[project.scripts]
zotero-arxiv-html-ingest = "zotero_arxiv_html_ingest.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "../zotero-metadata-enrichment/src"]

[tool.mypy]
mypy_path = "../zotero-metadata-enrichment/src"

