[project]
name = "zotero-metadata-enrichment"
version = "0.1.0"
description = "Reusable Zotero metadata enrichment helpers using Zotero translators, Crossref, and arXiv."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
zotero-metadata-enrichment = "zotero_metadata_enrichment.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

